--- a/cello/templates/max.html
+++ b/cello/templates/max.html
@@ -9,7 +9,11 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="{% static 'images/acad%}"
+    <h1>rain</h1>
+    <img src="{% static 'images/acad%}">
+    <h1>hiiii
+        
+    </h1>
    
 </body>
 </html>
